--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#     - assets/images
+  assets:
+    - assets/images/person1.png
+    - assets/images/person.png
 #     - assets/images
 
   # An image asset can refer to one or more resolution-specific "variants", see
